// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataSourceList Empty 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    />
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With data source 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <div
              className="sc-ksYbfQ dpwkBc"
            >
              <ul
                className="sc-hEsumM fPgKtp"
              >
                <li
                  className="sc-ktHwxA jgsGJH"
                >
                  3 months ago
                </li>
                <li
                  className="sc-ktHwxA jgsGJH"
                >
                  firstName lastName
                </li>
              </ul>
              <div
                className="sc-hmzhuo cfksoO"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                  <path
                    d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-cHGsZl DaTl"
          >
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Source
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Items
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                246
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Fields
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                11
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Filters
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                —
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Views
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With draft 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <span>
              Draft
            </span>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "color": "#a6a7aa",
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-cHGsZl DaTl"
          >
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Source
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                <svg
                  style={
                    Object {
                      "display": "none",
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Items
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                246
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Fields
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                11
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Filters
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Views
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With error 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <span>
              Error
            </span>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "color": "#a6a7aa",
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-frDJqD cgZNsg"
          >
            <div
              className="sc-kvZOFW eiPhbT"
            >
              error 1
            </div>
            <div
              className="sc-kvZOFW eiPhbT"
            >
              error2
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With job 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <div
              className="sc-ksYbfQ dpwkBc"
            >
              <ul
                className="sc-hEsumM fPgKtp"
              >
                <li
                  className="sc-ktHwxA jgsGJH"
                >
                  3 months ago
                </li>
                <li
                  className="sc-ktHwxA jgsGJH"
                >
                  firstName lastName
                </li>
              </ul>
              <div
                className="sc-hmzhuo cfksoO"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                  <path
                    d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-cHGsZl DaTl"
          >
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Source
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Items
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                246
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Fields
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                11
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Filters
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                —
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Views
              </span>
              <span
                className="sc-cJSrbW fgsObe"
              >
                —
              </span>
            </div>
          </div>
          <div
            className="sc-hqyNC keRCOE"
          >
            <div
              className="sc-gGBfsJ fCLeAg"
            >
              <span>
                Data Process History
              </span>
            </div>
            <div
              className="sc-jbKcbu bLHhzy"
            >
              <div
                className="sc-dNLxif ceSUYT"
              >
                <div
                  className="sc-jqCOkK eTnpfa"
                >
                  done
                </div>
                <div
                  className="sc-uJMKN ewfDTQ"
                >
                  white_spaces
                </div>
              </div>
              <div
                className="sc-bbmXgH cLeeLs"
              >
                <span>
                  Updated at
                </span>
                 
                08/09/2019 11:23
              </div>
            </div>
            <div
              className="sc-jbKcbu bLHhzy"
            >
              <div
                className="sc-dNLxif ceSUYT"
              >
                <div
                  className="sc-jqCOkK fYRgUY"
                >
                  process
                </div>
                <div
                  className="sc-uJMKN ewfDTQ"
                >
                  blank_cells
                </div>
              </div>
              <div
                className="sc-bbmXgH cLeeLs"
              >
                <span>
                  Updated at
                </span>
                 
                07/09/2019 11:23
              </div>
            </div>
            <div
              className="sc-jbKcbu bLHhzy"
            >
              <div
                className="sc-dNLxif ceSUYT"
              >
                <div
                  className="sc-jqCOkK hvmUXW"
                >
                  idle
                </div>
                <div
                  className="sc-uJMKN ewfDTQ"
                >
                  case_conversion
                </div>
              </div>
              <div
                className="sc-bbmXgH cLeeLs"
              >
                <span>
                  Updated at
                </span>
                 
                06/09/2019 11:23
              </div>
            </div>
            <div
              className="sc-jbKcbu bLHhzy"
            >
              <div
                className="sc-dNLxif ceSUYT"
              >
                <div
                  className="sc-jqCOkK hDIVmt"
                >
                  error
                </div>
                <div
                  className="sc-uJMKN ewfDTQ"
                >
                  handling_duplicates
                </div>
              </div>
              <div
                className="sc-bbmXgH cLeeLs"
              >
                <span>
                  Updated at
                </span>
                 
                05/09/2019 11:23
              </div>
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With processing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <span>
              Loading...
            </span>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "color": "#a6a7aa",
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-cHGsZl DaTl"
          >
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Source
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                <svg
                  style={
                    Object {
                      "display": "none",
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Items
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                246
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Fields
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                11
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Filters
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Views
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With ready for processing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fAjcbJ byigni"
  >
    <div
      className="sc-cMljjf cduCgM"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-jDwBTQ dWtMUn"
        >
          <div
            className="sc-jAaTju fNCBho"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gPEVay hRSMsP"
        >
          <ul
            className="sc-iRbamj sc-jlyJG ejGYJz"
          />
          <ul
            className="sc-iRbamj sc-gipzik HrPVR"
          >
            <li
              className="sc-csuQGl sc-bRBYWo uJJht"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-kjoXOD efVlwr"
    >
      <li
        className="sc-caSCKo jpGcCP"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <span>
              Loading...
            </span>
          </div>
          <h1
            onClick={[Function]}
            style={
              Object {
                "color": "#a6a7aa",
                "cursor": "pointer",
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
                "marginBottom": "20px",
              }
            }
          >
            name
          </h1>
          <div
            className="sc-cHGsZl DaTl"
          >
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Source
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                <svg
                  style={
                    Object {
                      "display": "none",
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Items
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                246
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Fields
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                11
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Filters
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
            <div
              className="sc-TOsTZ brKdgy"
            >
              <span
                className="sc-kgAjT hkDbIz"
              >
                Views
              </span>
              <span
                className="sc-cJSrbW ecZyKY"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
    <div
      className="sc-htoDjs iUYJOx"
    >
      <div
        className="sc-dnqmqq jpGIQI"
      >
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
            />
          </svg>
        </button>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
